--- a/dubbo-parent/dubbo-provider1/src/main/resources/application.yml
+++ b/dubbo-parent/dubbo-provider1/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
 dubbo:
   application:
     name: provider1
+    logger: slf4j
   scan:
     base-packages: priv.ms.dubbo.provider1.service
   protocol:
